# prism-ftmm

./: .editorconfig  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  ENGINEERING_AUDIT_REPORT.md  FINAL_ENGINEERING_AUDIT.md  GO_LIVE_CHECKLIST.md  INTERVIEW_PREPARATION.md  NEXT_SESSION_HANDOFF.md  PHASE1_COMPLETION_REPORT.md  PHASE1_EXECUTION_PLAN.md  PHASE1_FINAL_AUDIT.md  PHASE2_COMPLETION_REPORT.md  PHASE2_EXECUTION_PLAN.md  PHASE3_COMPLETION_REPORT.md  PHASE3_EXECUTION_PLAN.md  PHASE3_READINESS_REPORT.md  PHASE3_SESSION2_REPORT.md  PHASE3_SESSION3_REPORT.md  PHASE4_PROGRESS_REPORT.md  PHASE5_PROGRESS_REPORT.md  PORTFOLIO_DEMO_GUIDE.md  PRODUCTION_READINESS_REPORT.md  PROJECT_COMPLETENESS_REPORT.md  PROJECT_FINAL_REPORT.md  PROJECT_STRUCTURE.md  README.md  TECHNICAL_DECISIONS_SUMMARY.md
backend/fastapi-app/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml  railway.toml
backend/fastapi-app/app/: __init__.py  config.py  db.py  logging.py  main.py  rate_limiting.py
backend/fastapi-app/app/api/: __init__.py  analytics.py  auth.py  commit.py  company.py  dedup.py  health.py  imports.py  me.py  snapshots.py  users.py
backend/fastapi-app/app/dependencies/: __init__.py  auth.py  rbac.py
backend/fastapi-app/app/models/: __init__.py  alumni.py  audit.py  career.py  company.py  dedup.py  reference.py  security.py  snapshot.py  staging.py
backend/fastapi-app/app/schemas/: analytics.py  auth.py  commit.py  company.py  dedup.py  imports.py  me.py  snapshot.py  users.py
backend/fastapi-app/app/services/: analytics.py  analytics_filters.py  audit.py  authentication.py  commit.py  company_normalization.py  dedup.py  dedup_queue.py  import_parser.py  industry_classification.py  location_normalization.py  program_matcher.py  role_seniority.py  snapshot.py  user_provisioning.py  validation_status.py
backend/fastapi-app/migrations/: env.py
backend/fastapi-app/migrations/versions/: 0001_baseline.py  0002_reference_tables.py  0003_refresh_snapshot.py  (+7 more)
backend/fastapi-app/tests/: test_aggregation_edge_cases.py  test_analytics.py  test_audit_service.py  test_auth_dependencies.py  test_auth_endpoints.py  test_authentication_service.py  test_commit.py  test_company_api.py  test_company_normalization.py  test_dedup.py  test_dedup_queue.py  test_health.py  test_import_atomicity.py  test_import_parser.py  test_imports_endpoint.py  test_industry_classification.py  test_location_normalization.py  test_me_endpoint.py  test_program_matcher.py  test_quarterly_e2e.py  test_rate_limiting.py  test_role_seniority.py  test_seed_demo_dataset.py  test_snapshot.py  test_user_provisioning.py  test_users_endpoint.py  test_validation_status.py
(+100 files in other folders)
