[project]
name = "ftmm-alumni-backend"
version = "0.0.0"
description = "FastAPI backend for the FTMM Alumni Intelligence Dashboard (single business-logic gateway)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pyjwt>=2.13.0",
    "supabase>=2.0.0",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
    "pytest>=8.3",
    "httpx>=0.27",
    "types-openpyxl>=3.1.5.20260518",
]

[tool.uv]
package = false

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# B008: FastAPI's dependency injection pattern requires Depends() in function defaults.
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
